--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/new/prefix1">
         <file>res/background.png</file>
+        <file>res/start.png</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
